@@ -1,10 +1,10 @@
 .INCLUDES
-"sys/param.h"="# checking sys/param.h,.CHECK_INCLUDE(header_sys_param_h),REQUIRED=FALSE,INCLUDE=sys/param.h,.END"
-"dirent.h"="# checking dirent.h,.CHECK_INCLUDE(header_dirent_h),REQUIRED=FALSE,INCLUDE=dirent.h,.END"
-"stdbool.h"="# checking stdbool.h,.CHECK_INCLUDE(header_stdbool_h),REQUIRED=FALSE,INCLUDE=stdbool.h,.END"
+"sys/param.h"="# checking sys/param.h,.CHECK_INCLUDE(header_sys_param_h) {,REQUIRED=FALSE,INCLUDE=\"sys/param.h\",}"
+"dirent.h"="# checking dirent.h,.CHECK_INCLUDE(header_dirent_h) {,REQUIRED=FALSE,INCLUDE=\"dirent.h\",}"
+"stdbool.h"="# checking stdbool.h,.CHECK_INCLUDE(header_stdbool_h) {,REQUIRED=FALSE,INCLUDE=\"stdbool.h\",}"
 .END
 
 .FUNCTIONS
-strlcpy="# checking strlcpy in string.h,.CHECK_INCLUDE(function_strlcpy),REQUIRED=FALSE,INCLUDE=string.h,FUNCTION=strlcpy,.END"
-strlcat="# checking strlcat in string.h,.CHECK_INCLUDE(function_strlcat),REQUIRED=FALSE,INCLUDE=string.h,FUNCTION=strlcat,.END"
+strlcpy="# checking strlcpy in string.h,.CHECK_INCLUDE(function_strlcpy) {,REQUIRED=FALSE,INCLUDE=\"string.h\",FUNCTION=strlcpy,}"
+strlcat="# checking strlcat in string.h,.CHECK_INCLUDE(function_strlcat) {,REQUIRED=FALSE,INCLUDE=\"string.h\",FUNCTION=strlcat,}"
 .END
